Fix for mobible text readability on index page

--- a/index.css
+++ b/index.css
@@ -91,8 +91,9 @@ aside{
     }
 
     body {
-		font-size: 13px;
-        width: 100%;
+        max-width: 100%;
+		padding: 2%;
+    	margin: 0; 
     }
 
 	p {
